Ajustado as traduções dos resources do filament

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -2,5 +2,7 @@
   "Contacts": "Contatos",
   "Name": "Nome",
   "Phone": "Telefone",
-  "Notes": "Notas"
+  "Notes": "Notas",
+  "Sales": "Vendas",
+  "Sales Funnel": "Funil de vendas"
 }
